lua-sys/api_oficial.h

typedef int (*lua_CFunction) (lua_State *L);
typedef struct lua_State lua_State;
typedef unsigned long lua_Unsigned;
typedef struct luaL_Buffer luaL_Buffer;
const char *luaL_optstring (lua_State *L,
                            int arg,
                            const char *d);
lua_Unsigned luaL_optunsigned (lua_State *L,
                               int arg,
                               lua_Unsigned u);
char *luaL_prepbuffer (luaL_Buffer *B);
char *luaL_prepbuffsize (luaL_Buffer *B, size_t sz);
void luaL_pushresult (luaL_Buffer *B);
void luaL_pushresultsize (luaL_Buffer *B, size_t sz);
int luaL_ref (lua_State *L, int t);
typedef struct luaL_Reg {
  const char *name;
  lua_CFunction func;
} luaL_Reg;
void luaL_requiref (lua_State *L, const char *modname,
                    lua_CFunction openf, int glb);
void luaL_setfuncs (lua_State *L, const luaL_Reg *l, int nup);
void luaL_setmetatable (lua_State *L, const char *tname);
void *luaL_testudata (lua_State *L, int arg, const char *tname);
const char *luaL_tolstring (lua_State *L, int idx, size_t *len);
void luaL_traceback (lua_State *L, lua_State *L1, const char *msg,
                     int level);
const char *luaL_typename (lua_State *L, int index);
void luaL_unref (lua_State *L, int t, int ref);
void luaL_where (lua_State *L, int lvl);