lua-sys/lib.rs

    pub fn luaL_optstring(L: *mut lua_State, arg: c_int, d: *const c_char) -> *const c_char;
    pub fn luaL_optunsigned(L: *mut lua_State, arg: c_int, u: lua_Unsigned) -> lua_Unsigned;
    pub fn luaL_prepbuffer(B: *mut luaL_Buffer) -> *mut c_char;
    pub fn luaL_prepbuffsize(B: *mut luaL_Buffer, sz: size_t) -> *mut c_char;
    pub fn luaL_pushresult(B: *mut luaL_Buffer);
    pub fn luaL_pushresultsize(B: *mut luaL_Buffer, sz: size_t);
    pub fn luaL_ref(L: *mut lua_State, t: c_int) -> c_int;
    pub fn luaL_requiref(L: *mut lua_State, modname: *const c_char, openf: lua_CFunction, glb: c_int);
    pub fn luaL_setfuncs(L: *mut lua_State, l: *const luaL_Reg, nup: c_int);
    pub fn luaL_setmetatable(L: *mut lua_State, tname: *const c_char);
    pub fn luaL_testudata(L: *mut lua_State, arg: c_int, tname: *const c_char) -> *mut c_void;
    pub fn luaL_tolstring(L: *mut lua_State, idx: c_int, len: *mut size_t) -> *const c_char;
    pub fn luaL_traceback(L: *mut lua_State, L1: *mut lua_State, msg: *const c_char, level: c_int);
    pub fn luaL_typename(L: *mut lua_State, index: c_int) -> *const c_char;
    pub fn luaL_unref(L: *mut lua_State, t: c_int, _ref: c_int);
    pub fn luaL_where(L: *mut lua_State, lvl: c_int);
}
